--- a/src/index.html
+++ b/src/index.html
@@ -5,28 +5,28 @@
 <li><a href="uvod.html">Úvod</a></li>
 <li><a href="polivky-masite.html">Polívky masité</a></li>
 <li><a href="prichoutky-cili-asietky.html">Příchoutky čili asietky</a></li>
-<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html">Hovězí maso a rozličná jeho úprava</a></li>
-<li><a href="omacky-k-hovezimu-masu.html">Omáčky k hovězímu masu</a></li>
-<li><a href="nalozeniny-k-hovezimu-masu.html">Naloženiny k hovězímu masu</a></li>
-<li><a href="smazeniny-pofezky-svitky-a-kotletky.html">Smaženiny, pofézky, svítky a kotletky</a></li>
+<li><a href="hovezi-maso-a-rozlicna-jeho-uprava.html">Hovězí maso a&nbsp;rozličná jeho úprava</a></li>
+<li><a href="omacky-k-hovezimu-masu.html">Omáčky k&nbsp;hovězímu masu</a></li>
+<li><a href="nalozeniny-k-hovezimu-masu.html">Naloženiny k&nbsp;hovězímu masu</a></li>
+<li><a href="smazeniny-pofezky-svitky-a-kotletky.html">Smaženiny, pofézky, svítky a&nbsp;kotletky</a></li>
 <li><a href="zeleniny.html">Zeleniny</a></li>
-<li><a href="zadelavana-a-dusena-jidla.html">Zadělávaná a dušená jídla</a></li>
+<li><a href="zadelavana-a-dusena-jidla.html">Zadělávaná a&nbsp;dušená jídla</a></li>
 <li><a href="zadelavana-zverina.html">Zadělávaná zvěřina</a></li>
 <li><a href="pastyky.html">Paštyky</a></li>
-<li><a href="moucna-jidla-obycejna-i-jemnejsi.html">Moučná jídla, obyčejná i jemnější</a></li>
+<li><a href="moucna-jidla-obycejna-i-jemnejsi.html">Moučná jídla, obyčejná i&nbsp;jemnější</a></li>
 <li><a href="pudingy.html">Pudingy</a></li>
 <li><a href="nakypy.html">Nákypy</a></li>
 <li><a href="pecene.html">Pečené</a></li>
 <li><a href="salaty.html">Saláty</a></li>
 <li><a href="kompoty.html">Kompoty</a></li>
 <li><a href="masite-rosoly.html">Masité rosoly</a></li>
-<li><a href="rybi-a-postni-polivky.html">Rybí a postní polívky</a></li>
+<li><a href="rybi-a-postni-polivky.html">Rybí a&nbsp;postní polívky</a></li>
 <li><a href="rozlicne-ryby.html">Rozličné ryby</a></li>
-<li><a href="raci-zaby-sneci-a-musle.html">Raci, žáby, šneci a mušle</a></li>
+<li><a href="raci-zaby-sneci-a-musle.html">Raci, žáby, šneci a&nbsp;mušle</a></li>
 <li><a href="vejce.html">Vejce</a></li>
 <li><a href="jeste-nektera-postni-jidla.html">Ještě některá postní jídla</a></li>
-<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html">Koláče, buchty rozličné jiné pečivo a pamlsky</a></li>
-<li><a href="nadivky-do-kolacu-buchticek-a-koblih.html">Nádivky do koláčů, buchtiček a koblih</a></li>
+<li><a href="kolace-buchty-rozlicne-jine-pecivo-a-pamlsky.html">Koláče, buchty rozličné jiné pečivo a&nbsp;pamlsky</a></li>
+<li><a href="nadivky-do-kolacu-buchticek-a-koblih.html">Nádivky do koláčů, buchtiček a&nbsp;koblih</a></li>
 <li><a href="ledy-rozlicnych-barev.html">Ledy rozličných barev</a></li>
 <li><a href="dorty.html">Dorty</a></li>
 <li><a href="cukrovinky.html">Cukrovinky</a></li>
