--- a/src/salaty.html
+++ b/src/salaty.html
@@ -2,80 +2,80 @@
 
 <a id="salat-hlavkovy"><h2>Salát hlávkový</h2></a>
 
-<p>Ober svrchní listy s několika hlávek pěkného tvrdého salátu, rozkrájej je na čtvrtky a vyper je náležitě v několika vodách; potom rozmíchej půl koflíka brabancového oleje s dobrým vinním octem a solí, omoč v tom každou čtvrtku salátu, urovnej ho pěkně na misku a polej ho ještě všude tím smíšeným octem. Kdo chce, může salát několika na tvrdo uvařenými a na čtvrtky rozkrájenými vejci obložit.</p>
+<p>Ober svrchní listy s&nbsp;několika hlávek pěkného tvrdého salátu, rozkrájej je na čtvrtky a&nbsp;vyper je náležitě v&nbsp;několika vodách; potom rozmíchej půl koflíka brabancového oleje s&nbsp;dobrým vinním octem a&nbsp;solí, omoč v&nbsp;tom každou čtvrtku salátu, urovnej ho pěkně na misku a&nbsp;polej ho ještě všude tím smíšeným octem. Kdo chce, může salát několika na tvrdo uvařenými a&nbsp;na čtvrtky rozkrájenými vejci obložit.</p>
 
 <a id="hlavkovy-salat-na-francouzsky-zpusob"><h2>Hlávkový salát na francouzský způsob</h2></a>
 
-<p>Očisti dobře několik pěkných tvrdých hlávek salátu, svrchní listy ober, hlávky rozkrájej na čtvrtky, vyper je a nech je v čisté vodě ležet. Vyper a na drobno usekej hrstku zelené petružele, několik estragonových a bazaličkových lístků, osm šalotek, a smíchej vše dohromady; utři šest plných lžic brabancového oleje se třemi syrovými žloutky do husta, přimíchej k tomu tři lžíce hořčice, kávovou lžičku soli a ty usekané bylinky, konečně do toho přilej tolik dobrého octa, aby to bylo patřičně řídké; nyní vyndej salát na sejto a nech všechnu vodu z něho vysáknout, potom omoč každou čtvrtku v té upraveny omáčce, urovnej je pěkně na misku a ostatní omáčkou salát všude polej.</p>
+<p>Očisti dobře několik pěkných tvrdých hlávek salátu, svrchní listy ober, hlávky rozkrájej na čtvrtky, vyper je a&nbsp;nech je v&nbsp;čisté vodě ležet. Vyper a&nbsp;na drobno usekej hrstku zelené petružele, několik estragonových a&nbsp;bazaličkových lístků, osm šalotek, a&nbsp;smíchej vše dohromady; utři šest plných lžic brabancového oleje se třemi syrovými žloutky do husta, přimíchej k&nbsp;tomu tři lžíce hořčice, kávovou lžičku soli a&nbsp;ty usekané bylinky, konečně do toho přilej tolik dobrého octa, aby to bylo patřičně řídké; nyní vyndej salát na sejto a&nbsp;nech všechnu vodu z&nbsp;něho vysáknout, potom omoč každou čtvrtku v&nbsp;té upraveny omáčce, urovnej je pěkně na misku a&nbsp;ostatní omáčkou salát všude polej.</p>
 
-<a id="hlavkovy-salat-s-kyselou-smetanou"><h2>Hlávkový salát s kyselou smetanou</h2></a>
+<a id="hlavkovy-salat-s-kyselou-smetanou"><h2>Hlávkový salát s&nbsp;kyselou smetanou</h2></a>
 
-<p>Připrav hlávkový salát jako v předešlých předpisech, dej ho do misky, sceď s něho všechnu vodu, osol ho trochu, nalej na něj dobrou hustou kyselou smetanu, posyp ho trochu tlučeným pepřem a dobře to promíchej, pak salát na misce urovnej a posyp ho dobře nakrájenou pažitkou.</p>
+<p>Připrav hlávkový salát jako v&nbsp;předešlých předpisech, dej ho do misky, sceď s&nbsp;něho všechnu vodu, osol ho trochu, nalej na něj dobrou hustou kyselou smetanu, posyp ho trochu tlučeným pepřem a&nbsp;dobře to promíchej, pak salát na misce urovnej a&nbsp;posyp ho dobře nakrájenou pažitkou.</p>
 
 <a id="hlavkovy-salat-se-slaninou"><h2>Hlávkový salát se slaninou</h2></a>
 
-<p>Čtvrt libry slaniny rozkrájej na drobné kostky a nech ji na rendlíku do žluta usmažit; potom k ni přilej půl žejdlíka dobrého vinního vlažného octa, osol to a nech to zvařit. Zatím si připrav na misku dobře obraný, vypraný a na čtvrtky rozkrájený hlávkový salát, pak ho tím zvařeným octem polej, promíchej, na misce urovnej a nes ho hned na stůl.</p>
+<p>Čtvrt libry slaniny rozkrájej na drobné kostky a&nbsp;nech ji na rendlíku do žluta usmažit; potom k&nbsp;ni přilej půl žejdlíka dobrého vinního vlažného octa, osol to a&nbsp;nech to zvařit. Zatím si připrav na misku dobře obraný, vypraný a&nbsp;na čtvrtky rozkrájený hlávkový salát, pak ho tím zvařeným octem polej, promíchej, na misce urovnej a&nbsp;nes ho hned na stůl.</p>
 
 <a id="salat-okurkovy"><h2>Salát okurkový</h2></a>
 
-<p>Oloupej pěkné okurky a nech je chvíli ve studené vodě, pak je na kružadle na tenké lístky ukrouhej, dej je na misku, polej je dobrým vinním octem a dobrým brabancovým olejem, osol je, promíchej vidličkami a posyp je tlučeným pepřem.</p>
+<p>Oloupej pěkné okurky a&nbsp;nech je chvíli ve studené vodě, pak je na kružadle na tenké lístky ukrouhej, dej je na misku, polej je dobrým vinním octem a&nbsp;dobrým brabancovým olejem, osol je, promíchej vidličkami a&nbsp;posyp je tlučeným pepřem.</p>
 
-<a id="okurkovy-salat-s-kyselou-smetanou"><h2>Okurkový salát s kyselou smetanou</h2></a>
+<a id="okurkovy-salat-s-kyselou-smetanou"><h2>Okurkový salát s&nbsp;kyselou smetanou</h2></a>
 
-<p>Upraví se na týž způsob jako předešle, jen že se místo octa a oleje poleje hustou kyselou smetanou a posype se pepřem.</p>
+<p>Upraví se na týž způsob jako předešle, jen že se místo octa a&nbsp;oleje poleje hustou kyselou smetanou a&nbsp;posype se pepřem.</p>
 
 <a id="michany-salat"><h2>Míchaný salát</h2></a>
 
-<p>Uvař ve slané vodě čtyry pěkné růže karfiolu a čtyry celery, pak ober svrchní lupeny se třech hlávek zeleného a se třech hlávek červeně kropenatého salátu, rozkrájej je na čtvrtky a dobře je vyper; potom smíchej vinní ocet se solí a olejem, a připrav ním každý tento salát zvlášť; nyní udělej na velkou mísu nejprve okolek ze zelených hlávkových čtvrtek, pak věnec z rozebraného karfiolu, potom urovnej kropenatý hlávkový salát a do prostřed mísy dej na koláčky nakrájený a pepřem posypaný celer, který se však dříve, nežli se pepřem posype, musí polejt smíšeným octem a olejem. Aby tento salát chuť neztratil, nesmi se dělat dlouho předtím, než se dá na stůl.</p>
+<p>Uvař ve slané vodě čtyry pěkné růže karfiolu a&nbsp;čtyry celery, pak ober svrchní lupeny se třech hlávek zeleného a&nbsp;se třech hlávek červeně kropenatého salátu, rozkrájej je na čtvrtky a&nbsp;dobře je vyper; potom smíchej vinní ocet se solí a&nbsp;olejem, a&nbsp;připrav ním každý tento salát zvlášť; nyní udělej na velkou mísu nejprve okolek ze zelených hlávkových čtvrtek, pak věnec z&nbsp;rozebraného karfiolu, potom urovnej kropenatý hlávkový salát a&nbsp;do prostřed mísy dej na koláčky nakrájený a&nbsp;pepřem posypaný celer, který se však dříve, nežli se pepřem posype, musí polejt smíšeným octem a&nbsp;olejem. Aby tento salát chuť neztratil, nesmi se dělat dlouho předtím, než se dá na stůl.</p>
 
-<a id="salat-z-andivie"><h2>Salát z andivie</h2></a>
+<a id="salat-z-andivie"><h2>Salát z&nbsp;andivie</h2></a>
 
-<p>Z andivie se vezmou jenom ty pěkné žluté lístky, dobře se očistí, malinko osolí, naproti tomu ale hodně se osladí, ostatně se připraví brabancovým olejem a vinním octem jako jiný hlávkový salát. Jenom ať jest hezky sladký.</p>
+<p>Z andivie se vezmou jenom ty pěkné žluté lístky, dobře se očistí, malinko osolí, naproti tomu ale hodně se osladí, ostatně se připraví brabancovým olejem a&nbsp;vinním octem jako jiný hlávkový salát. Jenom ať jest hezky sladký.</p>
 
-<a id="salat-z-chmelicku"><h2>Salát z chmelíčku</h2></a>
+<a id="salat-z-chmelicku"><h2>Salát z&nbsp;chmelíčku</h2></a>
 
-<p>Mladý chmelíček se očistí a uvaří ve slané vodě tak jako špargl, pak se poleje olejem a octem a posype pepřem.</p>
+<p>Mladý chmelíček se očistí a&nbsp;uvaří ve slané vodě tak jako špargl, pak se poleje olejem a&nbsp;octem a&nbsp;posype pepřem.</p>
 
 <a id="sladky-salat"><h2>Sladký salát</h2></a>
 
-<p>Ostrouhej žemličky, rozkrájej je na lístky a vysmaž je pěkně do zlatová v přepouštěném rozpáleném másle, pak je ouhledně poklaď na mísu, na cukru ostrouhej kůru s jednoho citronu a jednoho pomeranče, posyp žemličky tím cukrem, vymačkej na ně šťávu z toho citronu a pomeranče, udělej <a href="#salat-z-andivie">okolek z andivie</a> a nech to stát na chladném místě, až se to dá na tabuli.</p>
+<p>Ostrouhej žemličky, rozkrájej je na lístky a&nbsp;vysmaž je pěkně do zlatová v&nbsp;přepouštěném rozpáleném másle, pak je ouhledně poklaď na mísu, na cukru ostrouhej kůru s&nbsp;jednoho citronu a&nbsp;jednoho pomeranče, posyp žemličky tím cukrem, vymačkej na ně šťávu z&nbsp;toho citronu a&nbsp;pomeranče, udělej <a href="#salat-z-andivie">okolek z&nbsp;andivie</a> a&nbsp;nech to stát na chladném místě, až se to dá na tabuli.</p>
 
 <a id="salat-rerichovy"><h2>Salát řeřichový</h2></a>
 
-<p>Přeber a vyper čistě řeřichu, pak ji připrav s olejem a octem, trochou soli a cukrem. Může se buď tak samotná dát na obrácený a na mísu poklopený hluboký talíř, anebo se může smíchat buď s andivií nebo se zelným salátem; udělá se totiž na talíř vždy jeden věnec ze řeřichy, pak jeden z andivie anebo ze zelí. Olej a ocet se musí k tomu dát zvlášť na stůl.</p>
+<p>Přeber a&nbsp;vyper čistě řeřichu, pak ji připrav s&nbsp;olejem a&nbsp;octem, trochou soli a&nbsp;cukrem. Může se buď tak samotná dát na obrácený a&nbsp;na mísu poklopený hluboký talíř, anebo se může smíchat buď s&nbsp;andivií nebo se zelným salátem; udělá se totiž na talíř vždy jeden věnec ze řeřichy, pak jeden z&nbsp;andivie anebo ze zelí. Olej a&nbsp;ocet se musí k&nbsp;tomu dát zvlášť na stůl.</p>
 
 <a id="salat-vlasky"><h2>Salát vlaský</h2></a>
 
-<p>Rozkrájej tak nazvaný cervulát na tenké koláčky, pak rovnej.okolo mísy vždy jeden koláček cervulátu a jeden koláček citronu, do mísy dej marynovaného ouhoře a pryky, oboje na kousky rozkrájené, jakož i od kůstek očištěné sardele a kaprle; potom utluč v moždíři jeden na tvrdo vařený žloutek, několik bobkových lístků, asi dvě sardele, půl cibule, 3 zrnka pepře a trochu kaprlí, nalej na to dobrý vinní ocet a brabancový olej, a proceď to na salát. Mohou se k tomu též dát ústřice, mušle a olivy – nemusejí však být.</p>
+<p>Rozkrájej tak nazvaný cervulát na tenké koláčky, pak rovnej.okolo mísy vždy jeden koláček cervulátu a&nbsp;jeden koláček citronu, do mísy dej marynovaného ouhoře a&nbsp;pryky, oboje na kousky rozkrájené, jakož i&nbsp;od kůstek očištěné sardele a&nbsp;kaprle; potom utluč v&nbsp;moždíři jeden na tvrdo vařený žloutek, několik bobkových lístků, asi dvě sardele, půl cibule, 3 zrnka pepře a&nbsp;trochu kaprlí, nalej na to dobrý vinní ocet a&nbsp;brabancový olej, a&nbsp;proceď to na salát. Mohou se k&nbsp;tomu též dát ústřice, mušle a&nbsp;olivy – nemusejí však být.</p>
 
 <a id="salat-celerovy"><h2>Salát celerový</h2></a>
 
-<p>Seřízni se čtyr nebo se šesti oškrábaných celerů zelené svršky a zachovej je ve studené vodě, aby hodně zkřehly; celery uvař a rozkrájej na koláčky, pak je urovnej do mísy, popraš je solí, polej olejem a octem, okolo mísy udělej věneček z celerové nati, posyp to pepřem, ty celerové vršky pěkně jehličkou rozkadej a poklad je navrch – tak to pěkně vypadá.</p>
+<p>Seřízni se čtyr nebo se šesti oškrábaných celerů zelené svršky a&nbsp;zachovej je ve studené vodě, aby hodně zkřehly; celery uvař a&nbsp;rozkrájej na koláčky, pak je urovnej do mísy, popraš je solí, polej olejem a&nbsp;octem, okolo mísy udělej věneček z&nbsp;celerové nati, posyp to pepřem, ty celerové vršky pěkně jehličkou rozkadej a&nbsp;poklad je navrch – tak to pěkně vypadá.</p>
 
 <a id="salat-zelny"><h2>Salát zelný</h2></a>
 
-<p>Rozeber zelnou hlávku a listy rozkrájej na drobné nudličky; osol vinní ocet a nech ho na kamenném kastrolu zvařit, pak vhod do něho kus nového másla zároveň s těmi zelními nudličkami a nech to chvilku povařit, načež zeli vyndej na misku, posyp ho tlučeným pepřem, a když vychladne, dej ho na stůl.</p>
+<p>Rozeber zelnou hlávku a&nbsp;listy rozkrájej na drobné nudličky; osol vinní ocet a&nbsp;nech ho na kamenném kastrolu zvařit, pak vhod do něho kus nového másla zároveň s&nbsp;těmi zelními nudličkami a&nbsp;nech to chvilku povařit, načež zeli vyndej na misku, posyp ho tlučeným pepřem, a&nbsp;když vychladne, dej ho na stůl.</p>
 
 <a id="salat-ze-syroveho-zeli"><h2>Salát ze syrového zelí</h2></a>
 
-<p>Rozeber zelnou, hlávku, vykrájej všechny košťály a listy rozkrájej na nudličky co možná tenounké; potom usekej na drobounko okrouhlým nožem jednu velkou cibuli, dej oboje na misku, promíchej to náležitě, osol, polej dobrým vinním octem a brabancovým olejem, posyp tlučeným pepřem a dej to na stůl.</p>
+<p>Rozeber zelnou, hlávku, vykrájej všechny košťály a&nbsp;listy rozkrájej na nudličky co možná tenounké; potom usekej na drobounko okrouhlým nožem jednu velkou cibuli, dej oboje na misku, promíchej to náležitě, osol, polej dobrým vinním octem a&nbsp;brabancovým olejem, posyp tlučeným pepřem a&nbsp;dej to na stůl.</p>
 
 <a id="salat-ze-sparglu"><h2>Salát ze šparglu</h2></a>
 
-<p>Ober pěkný špargl a spodní tvrdý díl odkroj, načež nech špargl ve slané vodě vařit, dej však pozor, aby se nepřevařil, potom vodu sceď, špargl nech vysáknout, pak ho urovnej pěkně na talíř, polej ho octem a olejem, posyp trochu tlučeným pepřem – a salát jest hotov.</p>
+<p>Ober pěkný špargl a&nbsp;spodní tvrdý díl odkroj, načež nech špargl ve slané vodě vařit, dej však pozor, aby se nepřevařil, potom vodu sceď, špargl nech vysáknout, pak ho urovnej pěkně na talíř, polej ho octem a&nbsp;olejem, posyp trochu tlučeným pepřem – a&nbsp;salát jest hotov.</p>
 
 <a id="salat-ze-sneku"><h2>Salát ze šneků</h2></a>
 
-<p>Uvař patnáct šneků ve vodě do měkka, pak je vyndej z domečků, očisti je náležitě a nakrájej je po délce na tenké kousky; taktéž nakrájej na dlouho čtyry dobře očištěné sardele, usekej drobně jednu cibuli, všecko dobře promíchej, urovnej to na talíř nebo na misku, polej to octem a dobrým olejem, posyp tlučeným pepřem a oblož to nakrájenými koláčky z vajec na tvrdo uvařených.</p>
+<p>Uvař patnáct šneků ve vodě do měkka, pak je vyndej z&nbsp;domečků, očisti je náležitě a&nbsp;nakrájej je po délce na tenké kousky; taktéž nakrájej na dlouho čtyry dobře očištěné sardele, usekej drobně jednu cibuli, všecko dobře promíchej, urovnej to na talíř nebo na misku, polej to octem a&nbsp;dobrým olejem, posyp tlučeným pepřem a&nbsp;oblož to nakrájenými koláčky z&nbsp;vajec na tvrdo uvařených.</p>
 
 <a id="obycejny-zemcatovy-salat-se-slaneckem"><h2>Obyčejný zemčatový salát se slanečkem</h2></a>
 
-<p>Uvař, oloupej a za tepla nakrájej na lístky ne příliš velká zemčátka, usekej na drobno jednu velkou cibuli a dvé na tvrdo uvařené vejce; nyní dej na mísu vrstvu zemčat, posyp je cibulí a vejci, pak dej opět zemčata, na to zase cibuli s vejci, a tak pokračuj, až je všecko na míse, načež to polej octem se solí a olejem rozmíchaným; potom stáhni slanečka, rozpůli ho, nakrájej na malé kousky a salát jimi povrchu oblož. Je-li slaneček mléčný, tedy mléčí v hrnečku kverlačkou hodně rozmíchej s olejem a octem, a salát tím polej. Kdo chce, může k němu též připojit na kostky nakrájená jablíčka.</p>
+<p>Uvař, oloupej a&nbsp;za tepla nakrájej na lístky ne příliš velká zemčátka, usekej na drobno jednu velkou cibuli a&nbsp;dvé na tvrdo uvařené vejce; nyní dej na mísu vrstvu zemčat, posyp je cibulí a&nbsp;vejci, pak dej opět zemčata, na to zase cibuli s&nbsp;vejci, a&nbsp;tak pokračuj, až je všecko na míse, načež to polej octem se solí a&nbsp;olejem rozmíchaným; potom stáhni slanečka, rozpůli ho, nakrájej na malé kousky a&nbsp;salát jimi povrchu oblož. Je-li slaneček mléčný, tedy mléčí v&nbsp;hrnečku kverlačkou hodně rozmíchej s&nbsp;olejem a&nbsp;octem, a&nbsp;salát tím polej. Kdo chce, může k&nbsp;němu též připojit na kostky nakrájená jablíčka.</p>
 
 <a id="michany-zemcatovy-salat"><h2>Míchaný zemčatový salát</h2></a>
 
-<p>Zůstanou-li po nějaké tabuli rozličné zbytky, jako: studená telecí pečeně, šunka, uzený jazyk, kapoun, tedy všecky takové zbytky rozkrájej na malé kostky, každý druh zvlášť, a odlož to stranou až k potřebě. Nech uvařit hrnek zemčat, pak uvař na tvrdo několik vajec, stáhni a rozpůli jednoho slanečka, očisti několik sardelí, rozpůlí je, kůstky vyber a stoč každou půlku na způsob šneka; rozkrájej též na kousky jednu pryku; také uvař ve slané vodě malé bobové lustičky anebo růži pěkného karfiolu, co právě máš; potom utři nebo utluč tři na tvrdo uvařené žloutky, rozmíchej je s dobrým brabancovým olejem a octem, a přidej k tomu jednu drobně nasekanou cibuli. Když jsou zemčata uvařená, tedy je oloupej, nakrájej je za tepla na koláčky, dej je na mísu a polej tou smíšeninou; nyní udělej první okolek z lustiček na nudličky nakrájených, anebo z karfiolu, jejž jsi dříve byla rozebrala a octem polila, druhý okolek udělej ze šunky, třetí z nějakého bílého masa, čtvrtý z usekaných tvrdých žloutků, konečně v prostředku z usekaných bílků, a polej všecko ostatním upraveným octem; načež mezi to urovnej sardelky, nakrájeného slanečka a pryku, a máš-li aspik, tedy ho můžeš trochu navrch skrze sejto nebo struhadlo protlačit, tak nabyde salát ještě pěknějšího vzhledu. Takové okrášlení zanechává se ostrovtipu kuchařčinu. – Rozumí se, že se tento salát i z polovice dotčených věcí upravit může.</p>
+<p>Zůstanou-li po nějaké tabuli rozličné zbytky, jako: studená telecí pečeně, šunka, uzený jazyk, kapoun, tedy všecky takové zbytky rozkrájej na malé kostky, každý druh zvlášť, a&nbsp;odlož to stranou až k&nbsp;potřebě. Nech uvařit hrnek zemčat, pak uvař na tvrdo několik vajec, stáhni a&nbsp;rozpůli jednoho slanečka, očisti několik sardelí, rozpůlí je, kůstky vyber a&nbsp;stoč každou půlku na způsob šneka; rozkrájej též na kousky jednu pryku; také uvař ve slané vodě malé bobové lustičky anebo růži pěkného karfiolu, co právě máš; potom utři nebo utluč tři na tvrdo uvařené žloutky, rozmíchej je s&nbsp;dobrým brabancovým olejem a&nbsp;octem, a&nbsp;přidej k&nbsp;tomu jednu drobně nasekanou cibuli. Když jsou zemčata uvařená, tedy je oloupej, nakrájej je za tepla na koláčky, dej je na mísu a&nbsp;polej tou smíšeninou; nyní udělej první okolek z&nbsp;lustiček na nudličky nakrájených, anebo z&nbsp;karfiolu, jejž jsi dříve byla rozebrala a&nbsp;octem polila, druhý okolek udělej ze šunky, třetí z&nbsp;nějakého bílého masa, čtvrtý z&nbsp;usekaných tvrdých žloutků, konečně v&nbsp;prostředku z&nbsp;usekaných bílků, a&nbsp;polej všecko ostatním upraveným octem; načež mezi to urovnej sardelky, nakrájeného slanečka a&nbsp;pryku, a&nbsp;máš-li aspik, tedy ho můžeš trochu navrch skrze sejto nebo struhadlo protlačit, tak nabyde salát ještě pěknějšího vzhledu. Takové okrášlení zanechává se ostrovtipu kuchařčinu. – Rozumí se, že se tento salát i&nbsp;z&nbsp;polovice dotčených věcí upravit může.</p>
 
 <a id="salat-ze-syroveho-masa"><h2>Salát ze syrového masa</h2></a>
 
-<p>Seškrab ostrou plechovou lžicí libru hovězího masa z kejty na kasičku, pak udělej z toho na talíř čtyry hromádky, posyp je solí, pepřem a velmi drobounce nasekanou cibulí, polej to octem a olejem, a nech to nejméně půl hodiny stát, aby se chuť z přísad do masa vtáhla. Můžeš k tomu také připojit sardele, kaprle a na tvrdo vařené skrájené vejce.</p>
+<p>Seškrab ostrou plechovou lžicí libru hovězího masa z&nbsp;kejty na kasičku, pak udělej z&nbsp;toho na talíř čtyry hromádky, posyp je solí, pepřem a&nbsp;velmi drobounce nasekanou cibulí, polej to octem a&nbsp;olejem, a&nbsp;nech to nejméně půl hodiny stát, aby se chuť z&nbsp;přísad do masa vtáhla. Můžeš k&nbsp;tomu také připojit sardele, kaprle a&nbsp;na tvrdo vařené skrájené vejce.</p>
