--- a/src/nadivky-do-kolacu-buchticek-a-koblih.html
+++ b/src/nadivky-do-kolacu-buchticek-a-koblih.html
@@ -1,33 +1,33 @@
-<h1><a href="index.html">Nádivky do koláčů, buchtiček a koblih</a></h1>
+<h1><a href="index.html">Nádivky do koláčů, buchtiček a&nbsp;koblih</a></h1>
 
 <a id="povidla"><h2>Povidla</h2></a>
 
-<p>Vezmi buď dobré slívové povidla, nebo uvař suché slívy a dobře je usekej, dej je na rendlíček, k nim kousek nového másla, trochu drobně rozkrájené citronové kůry, trochu hřebíčku a tlučeného cukru tolik, aby byly dosti sladké. Mnoho-li se čeho má dáti, nedá se ustanovit, protože se kuchařka musí řídit dle množství povidel. Nechají se trochu prohřát, pak vychladnout, načež se jich použije buď na koláče, koblihy nebo na buchtičky.</p>
+<p>Vezmi buď dobré slívové povidla, nebo uvař suché slívy a&nbsp;dobře je usekej, dej je na rendlíček, k&nbsp;nim kousek nového másla, trochu drobně rozkrájené citronové kůry, trochu hřebíčku a&nbsp;tlučeného cukru tolik, aby byly dosti sladké. Mnoho-li se čeho má dáti, nedá se ustanovit, protože se kuchařka musí řídit dle množství povidel. Nechají se trochu prohřát, pak vychladnout, načež se jich použije buď na koláče, koblihy nebo na buchtičky.</p>
 
 <a id="mak"><h2>Mák</h2></a>
 
-<p>Mák se může buď tlouct za subha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a potom se ve zvláštní k tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k němu kousek másla, a je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a nechá se ještě vařit, aby z něho byla hustá kašička, přidá se k němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
+<p>Mák se může buď tlouct za subha, nebo se dříve přemeje ve vodě, pak ve smetaně do měkka uvaří a&nbsp;potom se ve zvláštní k&nbsp;tomu zřízené pánvi dobře rozetře. Když jest rozetřen, dá se na rendlíček, k&nbsp;němu kousek másla, a&nbsp;je-li za sucha tlučen, tedy se přileje do něho sladké smetany, a&nbsp;nechá se ještě vařit, aby z&nbsp;něho byla hustá kašička, přidá se k&nbsp;němu buď cukru nebo českého medu tolik, aby byl dostatečně sladký, pak se do něho dá dle libosti buď citronové nebo cukrované pomerančové kůry a&nbsp;buď hřebíčku nebo skořice anebo květu. Každý si může dle libosti dát chuť jakou chce.</p>
 
 <a id="tvaroh"><h2>Tvaroh</h2></a>
 
-<p>Vezme se dobrý tvaroh, dá se na mísu a dobře se rozetře, pak se do něho vrazi žloutků a celých vajec tolik, aby byl právě tak řídký, jak jej kuchařka potřebuje (ku př. na libru tvarohu mohou se počítat 3 žloutky a 3 celé vejce), potom se do něho dá trochu květu a osladí se dle libosti. Má-li se tohoto tvarohu použit na německé koláče, tedy se nechá jen tak; na skládané koláče ale mohou se do něho dát dobře přebrané a přemyté malé hrozinky.</p>
+<p>Vezme se dobrý tvaroh, dá se na mísu a&nbsp;dobře se rozetře, pak se do něho vrazi žloutků a&nbsp;celých vajec tolik, aby byl právě tak řídký, jak jej kuchařka potřebuje (ku př. na libru tvarohu mohou se počítat 3 žloutky a&nbsp;3 celé vejce), potom se do něho dá trochu květu a&nbsp;osladí se dle libosti. Má-li se tohoto tvarohu použit na německé koláče, tedy se nechá jen tak; na skládané koláče ale mohou se do něho dát dobře přebrané a&nbsp;přemyté malé hrozinky.</p>
 
 <a id="hrozinkova-povidla"><h2>Hrozinková povidla</h2></a>
 
-<p>Omej ve studené vodě čtvrt libry pěkných velkých hrozinek a čistě je otři, pak z nich vyber všecky pecičky a drobně je rozkrájej, dej je na rendlíček, k nim s půl citronu drobně rozkrájenou kůru, nalej na ně několik lžiček rakouského vína a přidej cukru, aby nabyly líbezné chuti, dej k nim též trochu skořice a trochu hřebíčku, nech je trochu povařit a pak vychladnout. Těchto povidel může se v čas nouze použit místo zavařeného rybízu.</p>
+<p>Omej ve studené vodě čtvrt libry pěkných velkých hrozinek a&nbsp;čistě je otři, pak z&nbsp;nich vyber všecky pecičky a&nbsp;drobně je rozkrájej, dej je na rendlíček, k&nbsp;nim s&nbsp;půl citronu drobně rozkrájenou kůru, nalej na ně několik lžiček rakouského vína a&nbsp;přidej cukru, aby nabyly líbezné chuti, dej k&nbsp;nim též trochu skořice a&nbsp;trochu hřebíčku, nech je trochu povařit a&nbsp;pak vychladnout. Těchto povidel může se v&nbsp;čas nouze použit místo zavařeného rybízu.</p>
 
 <a id="cukrova-jiska"><h2>Cukrová jíška</h2></a>
 
-<p>Dej na rendlíček 4 loty pěkné mouky s malinkým kouskem másla, a nech ji do požloutla upražit, pak do ní přisyp 4 loty tlučeného cukru. Touto jíškou můžeš místo sekaných mandlí posypat malé koláčky.</p>
+<p>Dej na rendlíček 4 loty pěkné mouky s&nbsp;malinkým kouskem másla, a&nbsp;nech ji do požloutla upražit, pak do ní přisyp 4 loty tlučeného cukru. Touto jíškou můžeš místo sekaných mandlí posypat malé koláčky.</p>
 
-<a id="jicha-k-posypani-kolacu"><h2>Jícha k posypání koláčů</h2></a>
+<a id="jicha-k-posypani-kolacu"><h2>Jícha k&nbsp;posypání koláčů</h2></a>
 
-<p>Rozdrob na vále šest lotů čerstvého másla ve čtvrt libře mouky a ve čtyřech lotech tlučeného cukru, hodně to promíchej a posyp tím velké koláče ku kávě.</p>
+<p>Rozdrob na vále šest lotů čerstvého másla ve čtvrt libře mouky a&nbsp;ve čtyřech lotech tlučeného cukru, hodně to promíchej a&nbsp;posyp tím velké koláče ku kávě.</p>
 
 <a id="pernik"><h2>Perník</h2></a>
 
-<p>Ustrouhej několik tabulek perníku, dej ho s kouskem másla a tlučeným cukrem na rendlík a nech ho trochu upražit Jest k vůli rozmanitosti na německé koláče velmi příhodný a takto připravený i do buchtiček velmi chutný.</p>
+<p>Ustrouhej několik tabulek perníku, dej ho s&nbsp;kouskem másla a&nbsp;tlučeným cukrem na rendlík a&nbsp;nech ho trochu upražit Jest k&nbsp;vůli rozmanitosti na německé koláče velmi příhodný a&nbsp;takto připravený i&nbsp;do buchtiček velmi chutný.</p>
 
 <a id="snih"><h2>Sníh</h2></a>
 
-<p>Má-li sníh býti jak se patří, musí se obzvláště na to hledět, aby byly vejce čerstvé a ve chladu chované. Bílky, od kterých se žloutky i očka opatrně oddělí, dají se buď na cejnovou nebo na jinou mísu a šlehají se buď tenkou loučkou, nebo pěknou březovou oloupanou metličkou, nebo také, je-li naspěch, vidličkou tak dlouho, až se z nich udělá jako sníh bílá a tak hustá pěna, že, když se mísa obrátí, pěna na ni drží. Ve větších kuchyních mívají k tomu zvláštní mosazný kotlíček a drátěnou metlu, v domácnosti se to však všelijak odbyde. – Sněhu může se mimo jiné věci upotřebit i k okrášlení bílkových koláčů, totiž: dá se na každý koláček kus pevného sněhu, posypou se hodně strouhanými mandlemi a cukrem a nechají se spěšně v troubě pect.</p>
+<p>Má-li sníh býti jak se patří, musí se obzvláště na to hledět, aby byly vejce čerstvé a&nbsp;ve chladu chované. Bílky, od kterých se žloutky i&nbsp;očka opatrně oddělí, dají se buď na cejnovou nebo na jinou mísu a&nbsp;šlehají se buď tenkou loučkou, nebo pěknou březovou oloupanou metličkou, nebo také, je-li naspěch, vidličkou tak dlouho, až se z&nbsp;nich udělá jako sníh bílá a&nbsp;tak hustá pěna, že, když se mísa obrátí, pěna na ni drží. Ve větších kuchyních mívají k&nbsp;tomu zvláštní mosazný kotlíček a&nbsp;drátěnou metlu, v&nbsp;domácnosti se to však všelijak odbyde. – Sněhu může se mimo jiné věci upotřebit i&nbsp;k&nbsp;okrášlení bílkových koláčů, totiž: dá se na každý koláček kus pevného sněhu, posypou se hodně strouhanými mandlemi a&nbsp;cukrem a&nbsp;nechají se spěšně v&nbsp;troubě pect.</p>
