--- a/src/smazeniny-pofezky-svitky-a-kotletky.html
+++ b/src/smazeniny-pofezky-svitky-a-kotletky.html
@@ -4,7 +4,7 @@
 
 <a id="smazena-kuratka"><h2>Smažená kuřátka</h2></a>
 
-<p>Jak se s&nbsp;drůbeží zacházet! má, o&nbsp;tom jest zpředu v&nbsp;úvodu této knihy dosti obšírně pojednáno, bylo by tedy zbytečné, znova to podotýkala.</p>
+<p>Jak se s&nbsp;<a href="uvod.html#drubez">drůbeží zacházet</a> má, o&nbsp;tom jest zpředu v&nbsp;úvodu této knihy dosti obšírně pojednáno, bylo by tedy zbytečné, znova to podotýkala.</p>
 
 <p>Rozkrájej malé dobře očištěné kuřátka na čtvrtky, krček s&nbsp;hlavičkou mohou též jeden díl tvořit, osol je, však opatrně, aby nebyly přesoleny, obal každý kousek nejdříve v&nbsp;mouce, omoč ho v&nbsp;syrovém, vidličkou na talíři rozšlehaném vejci, posléz ho obal po všech stranách ve strouhané žemličce a&nbsp;urovnej všecky kousky na prkénko; když je čas ku smažení, nech na velikém železném kastrolu převařené máslo hodné rozpálit vlož do něho možno-li všecky kuřecí čtvrtky najednou, aby byly stejně usmažené, a&nbsp;nech je po obou stranách do zlatová usmažit.</p>
 
